--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ html5lib = "^1.1"
 pymongo = "^4.1.1"
 python-dotenv = "^0.20.0"
 Flask = "^2.1.2"
+selenium = "^4.2.0"
 
 [tool.poetry.dev-dependencies]
 
